--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,7 @@ name: Run Playwright tests
 
 on:
   schedule:
-    # GitHub cron is always UTC → 06:12 UTC = 11:42 AM IST (UTC+5:30)
-    # - cron: '12 6 * * *'
+    - cron: '30 3 * * 1-5'
   workflow_dispatch:
 
 jobs:
@@ -92,7 +91,7 @@ jobs:
           merge-multiple: true
 
       - name: Merge HTML & JSON reports
-        run: npx playwright merge-reports --config=playwright.config.js ./all-blob-reports
+        run: npx playwright merge-reports --reporter=html,json ./all-blob-reports
 
       - name: Upload combined report
         uses: actions/upload-artifact@v4
