--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,9 +29,17 @@ jobs:
           node-version: '18'
       - name: Create .env file
         run: |
-          echo "USERNAME=${{ secrets.USERNAME }}" >> .env
-          echo "PASSWORD=${{ secrets.PASSWORD }}" >> .env
-     
+         echo "USERNAME=${{ secrets.USERNAME }}" >> .env
+         echo "USERNAME1=${{ secrets.USERNAME1 }}" >> .env
+         echo "PASSWORD=${{ secrets.PASSWORD }}" >> .env
+         echo "NEW_PASSWORD=${{ secrets.NEW_PASSWORD }}" >> .env
+         echo "FIRST_NAME=${{ secrets.FIRST_NAME }}" >> .env
+         echo "STREET_NAME=${{ secrets.STREET_NAME }}" >> .env
+         echo "CITY=${{ secrets.CITY }}" >> .env
+         echo "STATE=${{ secrets.STATE }}" >> .env
+         echo "COUNTRY=${{ secrets.COUNTRY }}" >> .env
+         echo "ZIP_CODE=${{ secrets.ZIP_CODE }}" >> .env
+
       - name: Cache npm dependencies
         uses: actions/cache@v3
         with:
